1.0.0
- fix bug: In "Add new score", the pre-selected game was not 3 Count Bout.