@@ -1,2 +1,3 @@
 1.0.0
 - fix bug: In "Add new score", the pre-selected game was not 3 Count Bout.
+- feature: Score Comparator can compare chrono scores.
